...
                                                                            target:self
                                                                            action:@selector(moreOptionsButtonPressed)];
        self.navigationController.navigationBar.topItem.rightBarButtonItem = moreOptionButton;
        self.navigationController.navigationBar.topItem.rightBarButtonItem.accessibilityHint = NSLocalizedString(@"More options", nil);
    }
    
    UIBarButtonItem *backButton = [[UIBarButtonItem alloc] initWithTitle:NSLocalizedString(@"Back", nil) style:UIBarButtonItemStylePlain
                                                                  target:nil action:nil];
    self.navigationItem.backBarButtonItem = backButton;
    
    self.navigationItem.title = NSLocalizedString(@"New conversation", nil);
    [self.navigationController.navigationBar setTitleTextAttributes:
     @{NSForegroundColorAttributeName:[NCAppBranding themeTextColor]}];
...
        }
        NSArray *actions = [self getHeaderActions];
        HeaderSectionAction action = [[actions objectAtIndex:indexPath.row] intValue];
        switch (action) {
            case kHeaderSectionNewGroup:
                cell.labelTitle.text = NSLocalizedString(@"Group conversation", nil);
                cell.labelTitle.accessibilityLabel = NSLocalizedString(@"Create a new group conversation", nil);
                cell.labelTitle.accessibilityHint = NSLocalizedString(@"Double tap to start creating a new group conversation", nil);
                cell.labelTitle.textColor = [UIColor systemBlueColor];
                [cell.contactImage setImage:[UIImage imageNamed:@"group-avatar"]];
                break;
                
            case kHeaderSectionNewPublic:
                cell.labelTitle.text = NSLocalizedString(@"Public conversation", nil);
                cell.labelTitle.accessibilityLabel = NSLocalizedString(@"Create a new public conversation", nil);
                cell.labelTitle.accessibilityHint = NSLocalizedString(@"Double tap to start creating a new public conversation", nil);
                cell.labelTitle.textColor = [UIColor systemBlueColor];
                [cell.contactImage setImage:[UIImage imageNamed:@"public-avatar"]];
                break;

            case kHeaderSectionOpenConversations:
                cell.labelTitle.text = NSLocalizedString(@"List open conversations", nil);
                cell.labelTitle.accessibilityLabel = NSLocalizedString(@"Show list of open conversations", nil);
                cell.labelTitle.accessibilityHint = NSLocalizedString(@"Double tap to show list of open conversations", nil);
                cell.labelTitle.textColor = [UIColor systemBlueColor];
                [cell.contactImage setImage:[UIImage imageNamed:@"open-avatar"]];
                break;
                
            default:
...
