...
    [_roomCreationBackgroundView.placeholderView setHidden:YES];
    [_roomCreationBackgroundView.loadingView startAnimating];
    self.tableView.backgroundView = _roomCreationBackgroundView;
    
    self.definesPresentationContext = YES;
    
    UIBarButtonItem *nextButton = [[UIBarButtonItem alloc] initWithTitle:NSLocalizedString(@"Next", nil) style:UIBarButtonItemStylePlain
                                                                  target:self action:@selector(nextButtonPressed)];
    self.navigationItem.rightBarButtonItem = nextButton;
    self.navigationItem.rightBarButtonItem.accessibilityHint = NSLocalizedString(@"Continue to next step of conversation creation", nil);
    self.navigationController.navigationBar.tintColor = [NCAppBranding themeTextColor];
    self.navigationController.navigationBar.translucent = NO;
    self.navigationController.navigationBar.barTintColor = [NCAppBranding themeColor];
...
- (void)updateCounter
{
    UILabel *titleLabel = [[UILabel alloc] initWithFrame:CGRectMake(0, 0, 0, 0)];
    titleLabel.backgroundColor = [UIColor clearColor];
    titleLabel.textColor = [NCAppBranding themeTextColor];
    titleLabel.font = [UIFont boldSystemFontOfSize:16];
    titleLabel.text = NSLocalizedString(@"New group conversation", nil);
    titleLabel.accessibilityLabel = NSLocalizedString(@"Add participants to new group conversation", nil);
    [titleLabel sizeToFit];
    
    UILabel *subTitleLabel = [[UILabel alloc] initWithFrame:CGRectMake(0, 18, 0, 0)];
    subTitleLabel.backgroundColor = [UIColor clearColor];
    subTitleLabel.textColor = [NCAppBranding themeTextColor];
...
